2945 - fix retrieving tasks for default case